syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.grpc";
option java_outer_classname = "ItemServiceProto";

service ItemService {
  // Получить товар по ID
  rpc GetItemById(GetItemRequest) returns (GetItemResponse);

  // Получить список всех товаров
  rpc GetAllItems(Empty) returns (GetAllItemsResponse);
}

message GetItemRequest {
  int64 id = 1;
}

message GetItemResponse {
  Item item = 1;
}

message Empty {}

message GetAllItemsResponse {
  repeated Item items = 1;
}

message Item {
  int64 id = 1;
  string title = 2;
  double price = 3;
  string description = 4;
}